--- a/Naturapp/Base.lproj/LaunchScreen.storyboard
+++ b/Naturapp/Base.lproj/LaunchScreen.storyboard
@@ -15,8 +15,22 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="title" translatesAutoresizingMaskIntoConstraints="NO" id="iJn-TF-XZO">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="e1G-1a-D32"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="iJn-TF-XZO" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="3ga-pY-93w"/>
+                            <constraint firstItem="iJn-TF-XZO" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="EM7-pu-mJa"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="iJn-TF-XZO" secondAttribute="bottom" id="YJD-zh-W0O"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="iJn-TF-XZO" secondAttribute="trailing" id="eyS-FL-Pp7"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -25,6 +39,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="title" width="636" height="300"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
